--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "start": "node index.js",
     "start-dev": "nodemon index.js",
@@ -19,4 +22,3 @@
     "nodemon": "^2.0.19"
   }
 }
-
